--- a/e-commerce-jsf/pom.xml
+++ b/e-commerce-jsf/pom.xml
@@ -38,6 +38,12 @@
       <version>5.13.4</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.hazelcast</groupId>
+      <artifactId>hazelcast</artifactId>
+      <version>5.5.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <finalName>e-commerce-jsf</finalName>
