--- a/e-commerce-jsf/docker-compose.yml
+++ b/e-commerce-jsf/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   db:
     image: postgres:17.6
@@ -17,16 +16,29 @@ services:
       timeout: 5s
       retries: 5
 
+  pgadmin:
+    image: dpage/pgadmin4:9.7.0
+    container_name: ecommerce-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+
   nginx:
-    image: nginx:1.29.1
+    build:
+      context: nginx
+      dockerfile: Dockerfile
     container_name: ecommerce-nginx
     ports:
       - "8088:80"
     depends_on:
       - payara
       - payara2
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
 
   payara:
     build: .
@@ -41,8 +53,6 @@ services:
     ports:
       - "8080:8080"
       - "9009:9009"
-    volumes:
-      - ./deploy:/opt/payara/deployments
     depends_on:
       - db
 
@@ -59,23 +69,8 @@ services:
     ports:
       - "8081:8080"
       - "9010:9009"
-    volumes:
-      - ./deploy:/opt/payara/deployments
     depends_on:
       - db
-
-  pgadmin:
-    image: dpage/pgadmin4:9.7.0
-    container_name: ecommerce-pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - db
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
 
 volumes:
   db_data:
