--- a/e-commerce-jsf/pom.xml
+++ b/e-commerce-jsf/pom.xml
@@ -44,6 +44,17 @@
       <version>5.5.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.main.common</groupId>
+      <artifactId>glassfish-api</artifactId>
+      <version>6.2.5</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>2.5.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>e-commerce-jsf</finalName>
