--- a/e-commerce-jsf/docker-compose.yml
+++ b/e-commerce-jsf/docker-compose.yml
@@ -1,5 +1,8 @@
 services:
   db:
+    profiles:
+      - dev
+      - app
     image: postgres:17.6
     container_name: ecommerce-db
     environment:
@@ -17,6 +20,9 @@ services:
       retries: 5
 
   pgadmin:
+    profiles:
+      - dev
+      - app
     image: dpage/pgadmin4:9.7.0
     container_name: ecommerce-pgadmin
     environment:
@@ -30,6 +36,8 @@ services:
       - pgadmin_data:/var/lib/pgadmin
 
   nginx:
+    profiles:
+      - app
     build:
       context: nginx
       dockerfile: Dockerfile
@@ -41,6 +49,8 @@ services:
       - payara2
 
   payara:
+    profiles:
+      - app
     build: .
     container_name: ecommerce-payara
     hostname: payara
@@ -49,7 +59,7 @@ services:
       JDBC_USER: postgres
       JDBC_PASSWORD: password
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
-    command: ["--deploydir", "/opt/payara/deployments", "--clustermode", "dns:payara:6900,payara2:6900"]
+    command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
       - "8080:8080"
       - "9009:9009"
@@ -57,6 +67,8 @@ services:
       - db
 
   payara2:
+    profiles:
+      - app
     build: .
     container_name: ecommerce-payara-2
     hostname: payara2
@@ -65,7 +77,7 @@ services:
       JDBC_USER: postgres
       JDBC_PASSWORD: password
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
-    command: ["--deploydir", "/opt/payara/deployments", "--clustermode", "dns:payara:6900,payara2:6900"]
+    command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
       - "8081:8080"
       - "9010:9009"
