--- a/e-commerce-micro/src/main/webapp/WEB-INF/web.xml
+++ b/e-commerce-micro/src/main/webapp/WEB-INF/web.xml
@@ -53,4 +53,23 @@
       <value>org.glassfish.api.jdbc.validation.MySQLConnectionValidation</value>
     </property> -->
   </data-source>
+
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
+  <security-role>
+    <role-name>guest</role-name>
+  </security-role>
+
+    <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Protected Pages</web-resource-name>
+      <url-pattern>/customer.xhtml</url-pattern>
+      <http-method>GET</http-method>
+      <http-method>POST</http-method>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
 </web-app>
