--- a/e-commerce-micro/docker-compose.yml
+++ b/e-commerce-micro/docker-compose.yml
@@ -42,8 +42,9 @@ services:
       context: nginx
       dockerfile: Dockerfile
     container_name: ecommerce-nginx
+    hostname: nginx
     ports:
-      - "8088:80"
+      - "8088:8088"
     depends_on:
       - payara
       - payara2
@@ -58,6 +59,12 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      AUTH_CLIENT_ID: e-commerce
+      AUTH_REALM: e-commerce-dev
+      AUTH_HOST: https://keycloak.eseidinger.de
+      BASE_URL: http://localhost:8088
+      PROXY_HOST: localhost
+      PROXY_PORT: "8088"
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
     command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
@@ -76,6 +83,12 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      AUTH_CLIENT_ID: e-commerce
+      AUTH_REALM: e-commerce-dev
+      AUTH_HOST: https://keycloak.eseidinger.de
+      BASE_URL: http://localhost:8088
+      PROXY_HOST: localhost
+      PROXY_PORT: "8088"
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
     command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
