--- a/e-commerce-micro/nginx/nginx.conf
+++ b/e-commerce-micro/nginx/nginx.conf
@@ -14,13 +14,14 @@ http {
     }
 
     server {
-        listen 80;
+        listen 8088;
         location / {
             proxy_pass http://payara_backend;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host:$server_port;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Port $server_port;
         }
     }
 }
