--- a/e-commerce-micro/docker-compose.yml
+++ b/e-commerce-micro/docker-compose.yml
@@ -59,12 +59,13 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      MP_JWT_VERIFY_ISSUER: https://keycloak.eseidinger.de/realms/e-commerce-dev
+      MP_JWT_VERIFY_PUBLICKEY_LOCATION: https://keycloak.eseidinger.de/realms/e-commerce-dev/protocol/openid-connect/certs
+      # MP_JWT_VERIFY_AUDIENCES: e-commerce
       AUTH_CLIENT_ID: e-commerce
       AUTH_REALM: e-commerce-dev
       AUTH_HOST: https://keycloak.eseidinger.de
       BASE_URL: http://localhost:8088
-      PROXY_HOST: localhost
-      PROXY_PORT: "8088"
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
     command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
@@ -83,12 +84,13 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      MP_JWT_VERIFY_ISSUER: https://keycloak.eseidinger.de/realms/e-commerce-dev
+      MP_JWT_VERIFY_PUBLICKEY_LOCATION: https://keycloak.eseidinger.de/realms/e-commerce-dev/protocol/openid-connect/certs
+      # MP_JWT_VERIFY_AUDIENCES: e-commerce
       AUTH_CLIENT_ID: e-commerce
       AUTH_REALM: e-commerce-dev
       AUTH_HOST: https://keycloak.eseidinger.de
       BASE_URL: http://localhost:8088
-      PROXY_HOST: localhost
-      PROXY_PORT: "8088"
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:9009"
     command: ["--deploydir", "/opt/payara/deployments", "--contextroot", "/", "--clustermode", "dns:payara:6900,payara2:6900"]
     ports:
