refactor microprofile auth, add angular frontend

--- a/e-commerce-micro/Dockerfile
+++ b/e-commerce-micro/Dockerfile
@@ -4,6 +4,9 @@ FROM payara/micro:6.2025.8-jdk21
 # Copy application artifacts (WAR or EAR) to deployments folder
 COPY ./deploy /opt/payara/deployments
 
+# Copy logging configuration
+COPY ./config/logging.properties /opt/payara/logging.properties
+
 # Optionally set JVM options for debugging, memory, etc.
 ENV JVM_ARGS="-Djdk.util.zip.disableZip64ExtraFieldValidation=true"
 
