update payara web app

--- a/e-commerce-web/docker-compose.yml
+++ b/e-commerce-web/docker-compose.yml
@@ -58,6 +58,12 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      AUTH_CLIENT_ID: e-commerce
+      AUTH_REALM: e-commerce-dev
+      AUTH_HOST: https://keycloak.eseidinger.de
+      BASE_URL: http://localhost:8088
+      MP_JWT_VERIFY_PUBLICKEY_LOCATION: https://keycloak.eseidinger.de/realms/e-commerce-dev/protocol/openid-connect/certs
+      MP_JWT_VERIFY_ISSUER: https://keycloak.eseidinger.de/realms/e-commerce-dev
       HAZELCAST_MEMBERS: "payara:4900,payara2:4900"
       PAYARA_ARGS: "--debug"
     ports:
@@ -77,6 +83,12 @@ services:
       DB_HOST: db
       JDBC_USER: postgres
       JDBC_PASSWORD: password
+      AUTH_CLIENT_ID: e-commerce
+      AUTH_REALM: e-commerce-dev
+      AUTH_HOST: https://keycloak.eseidinger.de
+      BASE_URL: http://localhost:8088
+      MP_JWT_VERIFY_PUBLICKEY_LOCATION: https://keycloak.eseidinger.de/realms/e-commerce-dev/protocol/openid-connect/certs
+      MP_JWT_VERIFY_ISSUER: https://keycloak.eseidinger.de/realms/e-commerce-dev
       HAZELCAST_MEMBERS: "payara:4900,payara2:4900"
       PAYARA_ARGS: "--debug"
     ports:
