--- a/e-commerce-micro/pom.xml
+++ b/e-commerce-micro/pom.xml
@@ -21,9 +21,9 @@
     <glassfish.version>6.2.5</glassfish.version>
     <quartz.version>2.5.0</quartz.version>
     <slf4j.version>2.0.17</slf4j.version>
-    <log4j.version>2.25.1</log4j.version>
     <microprofile.config.version>3.1</microprofile.config.version>
     <jjwt.version>0.13.0</jjwt.version>
+    <primefaces.version>15.0.0</primefaces.version>
     <!-- Plugin versions -->
     <payara.micro.maven.plugin.version>2.5</payara.micro.maven.plugin.version>
     <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
@@ -32,6 +32,16 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
@@ -68,6 +78,12 @@
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-jackson</artifactId>
       <version>${jjwt.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>${primefaces.version}</version>
+      <classifier>jakarta</classifier>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -133,43 +149,6 @@
                   <type>war</type>
                 </artifactItem>
               </deployArtifacts>
-              <customJars>
-                <artifactItem>
-                  <groupId>org.flywaydb</groupId>
-                  <artifactId>flyway-core</artifactId>
-                  <version>${flyway.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.flywaydb</groupId>
-                  <artifactId>flyway-database-postgresql</artifactId>
-                  <version>${flyway.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.postgresql</groupId>
-                  <artifactId>postgresql</artifactId>
-                  <version>${postgresql.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>org.quartz-scheduler</groupId>
-                  <artifactId>quartz</artifactId>
-                  <version>${quartz.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>io.jsonwebtoken</groupId>
-                  <artifactId>jjwt-api</artifactId>
-                  <version>${jjwt.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>io.jsonwebtoken</groupId>
-                  <artifactId>jjwt-impl</artifactId>
-                  <version>${jjwt.version}</version>
-                </artifactItem>
-                <artifactItem>
-                  <groupId>io.jsonwebtoken</groupId>
-                  <artifactId>jjwt-jackson</artifactId>
-                  <version>${jjwt.version}</version>
-                </artifactItem>
-              </customJars>
             </configuration>
           </execution>
 
