--- a/e-commerce-micro/pom.xml
+++ b/e-commerce-micro/pom.xml
@@ -25,6 +25,8 @@
     <jjwt.version>0.13.0</jjwt.version>
     <primefaces.version>15.0.0</primefaces.version>
     <!-- Plugin versions -->
+    <maven.compiler.plugin.version>3.14.1</maven.compiler.plugin.version>
+    <java.version>21</java.version>
     <payara.micro.maven.plugin.version>2.5</payara.micro.maven.plugin.version>
     <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
     <flyway.maven.plugin.version>10.13.0</flyway.maven.plugin.version>
@@ -127,6 +129,15 @@
     <finalName>e-commerce-micro</finalName>
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven.compiler.plugin.version}</version>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
+      </plugin>
 
       <plugin>
         <groupId>fish.payara.maven.plugins</groupId>
