--- a/e-commerce-web/pom.xml
+++ b/e-commerce-web/pom.xml
@@ -21,8 +21,7 @@
     <quartz.version>2.5.0</quartz.version>
     <slf4j.version>2.0.17</slf4j.version>
     <log4j.version>2.25.1</log4j.version>
-    <microprofile.jwt.version>2.1</microprofile.jwt.version>
-    <jjwt.version>0.13.0</jjwt.version>
+    <primefaces.version>15.0.0</primefaces.version>
     <!-- Plugin versions -->
     <maven.clean.plugin.version>3.3.2</maven.clean.plugin.version>
     <flyway.maven.plugin.version>10.13.0</flyway.maven.plugin.version>
@@ -62,19 +61,10 @@
       <version>${slf4j.version}</version>
     </dependency>
     <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-api</artifactId>
-      <version>${jjwt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-impl</artifactId>
-      <version>${jjwt.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt-jackson</artifactId>
-      <version>${jjwt.version}</version>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>${primefaces.version}</version>
+      <classifier>jakarta</classifier>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -104,12 +94,6 @@
       <groupId>fish.payara.api</groupId>
       <artifactId>payara-api</artifactId>
       <version>${payara.web.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.eclipse.microprofile.jwt</groupId>
-      <artifactId>microprofile-jwt-auth-api</artifactId>
-      <version>${microprofile.jwt.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
