--- a/e-commerce-web/k8s/deployment.yaml
+++ b/e-commerce-web/k8s/deployment.yaml
@@ -14,11 +14,13 @@ spec:
     spec:
       containers:
       - name: payara
-        image: localhost:32000/ecommerce-micro:latest
+        image: localhost:32000/ecommerce-web:latest
         ports:
         - containerPort: 8080
-        args: ["--deploydir", "/opt/payara/deployments", "--clustermode", "dns:payara-headless:6900"]
+        - containerPort: 4900
         env:
+        - name: HAZELCAST_MEMBERS
+          value: "payara-headless:4900"
         - name: DB_HOST
           value: postgres
         - name: JDBC_USER
@@ -36,8 +38,8 @@ spec:
     app: payara-app
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
+      port: 4900
+      targetPort: 4900
 ---
 apiVersion: v1
 kind: Service
