add export and import scripts and data

--- a/database/ora2pg_migration/config/ora2pg.conf
+++ b/database/ora2pg_migration/config/ora2pg.conf
@@ -625,9 +625,9 @@ DOUBLE_MAX_VARCHAR	0
 # database, this will disable file output. Note that these directives are only
 # used for data export, other export need to be imported manually through the
 # use of psql or any other PostgreSQL client.
-PG_DSN		dbi:Pg:dbname=postgres;host=localhost;port=5432
-PG_USER	    postgres
-PG_PWD		admin123
+#PG_DSN		dbi:Pg:dbname=postgres;host=localhost;port=5432
+#PG_USER	    postgres
+#PG_PWD		admin123
 
 # By default all output is dump to STDOUT if not send directly to postgresql
 # database (see above). Give a filename to save export to it. If you want
