--- a/e-commerce-micro/docker-compose.yml
+++ b/e-commerce-micro/docker-compose.yml
@@ -50,6 +50,8 @@ services:
       - payara2
 
   payara:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     profiles:
       - app
     build: .
@@ -61,7 +63,8 @@ services:
       JDBC_PASSWORD: password
       AUTH_CLIENT_ID: e-commerce
       AUTH_REALM: e-commerce-dev
-      AUTH_HOST: https://keycloak.eseidinger.de
+      AUTH_HOST: http://localhost:8084
+      AUTH_HOST_INTERNAL: http://host.docker.internal:8084
       BASE_URL: http://localhost:8088
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
     command:
@@ -80,6 +83,8 @@ services:
       - db
 
   payara2:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     profiles:
       - app
     build: .
@@ -91,7 +96,8 @@ services:
       JDBC_PASSWORD: password
       AUTH_CLIENT_ID: e-commerce
       AUTH_REALM: e-commerce-dev
-      AUTH_HOST: https://keycloak.eseidinger.de
+      AUTH_HOST: http://localhost:8084
+      AUTH_HOST_INTERNAL: http://host.docker.internal:8084
       BASE_URL: http://localhost:8088
       JVM_ARGS: "-Djdk.util.zip.disableZip64ExtraFieldValidation=true -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005"
     command:
