--- a/e-commerce-web/src/main/webapp/WEB-INF/web.xml
+++ b/e-commerce-web/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,27 @@
       30
     </session-timeout>
   </session-config>
+
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>Protected JSF Pages</web-resource-name>
+      <url-pattern>/jsf/index.xhtml</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+      <role-name>guest</role-name>
+      <role-name>admin</role-name>
+    </auth-constraint>
+  </security-constraint>
+
+  <security-role>
+    <role-name>guest</role-name>
+  </security-role>
+  
+  <security-role>
+    <role-name>admin</role-name>
+  </security-role>
+
+  <login-config>
+    <auth-method>OIDC</auth-method>
+  </login-config>
 </web-app>
